--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<title>Jonathan W</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Jonathan Wright - Portfolio - An enthusiastic coder with a passion for problem solving, I've been coding for over four 
+		years and don't want it to stop!">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
@@ -27,6 +29,9 @@
 						<div class="content">
 							<h1>Jonathan Wright</h1>
 							<p class="major">Software Engineer | Full Stack Developer | Python Django | JavaScript React</p>
+							<p>An enthusiastic coder with a passion for problem solving, I've been coding for over four 
+								years and don't want it to stop! I'm receiving my formal education attending Brigham Young 
+								University-Idaho, working towards a Bachelor Of Science Degree in Applied Technology.</p>
 							<ul class="icons">
 								<li>
 									<a href="https://www.linkedin.com/in/jonathan-wright-873b021ab" target="_blank" class="icon brands style2 fa-linkedin-in">
@@ -63,8 +68,128 @@
 						</div>
 					</section>
 
+					<section class="wrapper style1 align-center">
+						<div class="content">
+							<h2>Education</h2>
+							<p>Full-Stack Developer Certificate -- Python, MERN(React.js), Java Full-Stacks -- Coding Dojo, Idaho -2020
+								<br>
+								Applied Technology -- Bachelors Degree -- Brigham Young University Idaho</p>
+						</div>
+					</section>
+					<!-- Six -->
+						
+					<section class="wrapper style1 align-center">
+						<div class="inner">
+							<h2>Technical Skills</h2>
+							<p>Learning more every day</p>
+							<div class="items style1 medium onscroll-fade-in">
+								<section>
+									<span class="fab fa-js-square fa-2x"></span>
+									<h3>JavaScript</h3>
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
+								</section>
+								<section>
+									<span class="fab fa-python fa-2x"></span>
+									<h3>Python</h3>
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
+								</section>
+								<section>
+									<span class="fas fa-file-code fa-2x"></span>
+									<h3>HTML/CSS</h3>
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
+								</section>
+								<section>
+									<span><img src="https://img.icons8.com/ios-filled/50/000000/jquery.png" alt="JQuery"/></span>
+									<h3>JQuery</h3>
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
+								</section>
+								<section>
+									<span><img src="https://img.icons8.com/windows/64/000000/django.png" alt="Django"/></span>
+									<h3>Django</h3>
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
+								</section>
+								<section>
+									<span class="fab fa-react fa-2x"></span>
+									<h3>React</h3>
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
+								</section>
+								<section>
+									<span class="fab fa-node fa-2x"></span>
+									<h3>Node.js</h3>
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
+								</section>
+								<section>
+									<span><img src="https://img.icons8.com/ios-filled/100/000000/mysql-logo.png" alt="MySQL"/></span>
+									<!-- <h3>MySQL</h3> -->
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
+								</section>
+								<section>
+									<span><img src="https://img.icons8.com/color/48/000000/mongodb.png" alt="MongoDB"/></span>
+									<h3>MongoDB</h3>
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
+								</section>
+								<section>
+									<span><img src="https://img.icons8.com/ios-filled/50/000000/postgreesql.png" alt="PostgreSQL"/></span>
+									<h3>PostgreSQL</h3>
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
+								</section>
+								<section>
+									<span><img src="https://img.icons8.com/wired/64/000000/postman-api.png" alt="Postman"/></span>
+									<h3>Postman</h3>
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
+								</section>
+								<section>
+									<span><img src="https://img.icons8.com/material-sharp/48/000000/github.png" alt="Github"/></span>
+									<h3>Github</h3>
+									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
+								</section>
+							</div>
+						</div>
+					</section>
+
 				<!-- Two -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="two">
+					<section id="two" class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<h2>Text-A-Tow.com</h2>
+							<p>Fill out a form and have the nearest vehicle service provider headed your direction. 
+								A website created for P&D Towing to service its customers primarily on mobile devices.
+								On the frontend uses HTML, CSS and JavaScript with a few google APIs and JS
+								libraries like Jquery. Stripe is utilized as a payment system both frontend and backend.
+								I created the backend using Python Django, leveraging APIs like Twilio for communication with
+								the customer via text. MySQL was used as the database for this project with AWS hosting</p>
+							<ul class="actions stacked">
+								<li><a href="https://textatow.com/" class="button">walk-through</a></li>
+								<!-- onclick="toggle('PDT', 'pdtowing', true)" -->
+							</ul>
+						</div>
+						<div class="video" id="PDT" hidden="true">
+							<video id="pdtowing" width="100%" controls muted>
+								<source src="./video/P&D.mp4" type="video/mp4">
+								Your browser does not support HTML video.
+							</video>
+							<img src="images/icons8-macos-close-32.png" alt="close" class="close" onclick="toggle('PDT', 'pdtowing', false)"/>
+						</div>
+						<div class="image">
+							<img src="images/P&DT.png" alt="Pickup & Delivery Towing" onclick="toggle('PDT', 'pdtowing', true)" />
+						</div>
+					</section>
+
+				<!-- Three -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<h2>Happy Helper</h2>
+							<p>This project was built with Python Django It also has similar database interaction as tv shows, using Djangos built in SQLite. Using Bcrypt and other validation, you could use your real information and it would be safe. I wouldn't though because I'm paranoid. Login or register to start posting your tasks or accept tasks from others! </p>
+							<ul class="actions stacked">
+								<li><a href="https://github.com/Banapple01/Coding_Dojo-School-work/tree/master/Dojo_Assignments/Python/django/django_fullstack/belt_exam" target="_blank" class="button">Check out the repo</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/happyhelper.png" alt="Happy Helper picture" />
+						</div>
+					</section>
+
+				<!-- Four -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="four">
 						<div class="content">
 							<h2>TV Shows</h2>
 							<p>This Project was created using Python Django and MySQL as the Database. Keep track of all your favorite movies. Add more, edit the shows present or delete them entirely.</p>
@@ -82,41 +207,6 @@
 						</div>
 						<div class="image">
 							<img src="images/tv_shows.png" alt="Tv shows Project" onclick="toggle('TV', 'tvshows', true)" />
-						</div>
-					</section>
-
-				<!-- Three -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
-						<div class="content">
-							<h2>Happy Helper</h2>
-							<p>This project was built with Python Django It also has similar database interaction as tv shows, using Djangos built in SQLite. Using Bcrypt and other validation, you could use your real information and it would be safe. I wouldn't though because I'm paranoid. Login or register to start posting your tasks or accept tasks from others! </p>
-							<ul class="actions stacked">
-								<li><a href="https://github.com/Banapple01/Coding_Dojo-School-work/tree/master/Dojo_Assignments/Python/django/django_fullstack/belt_exam" target="_blank" class="button">Check out the repo</a></li>
-							</ul>
-						</div>
-						<div class="image">
-							<img src="images/happyhelper.png" alt="" />
-						</div>
-					</section>
-
-				<!-- Four -->
-					<section id="four" class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
-						<div class="content">
-							<h2>P & D Towing</h2>
-							<p>Fill out a simple form and have the nearest vehicle service provider headed your direction. Using Google maps API, and Djangos built in email messaging.</p>
-							<ul class="actions stacked">
-								<li><a href="#four" onclick="toggle('PDT', 'pdtowing', true)" class="button">walk-through</a></li>
-							</ul>
-						</div>
-						<div class="video" id="PDT" hidden="true">
-							<video id="pdtowing" width="100%" controls muted>
-								<source src="./video/P&D.mp4" type="video/mp4">
-								Your browser does not support HTML video.
-							</video>
-							<img src="images/icons8-macos-close-32.png" alt="close" class="close" onclick="toggle('PDT', 'pdtowing', false)"/>
-						</div>
-						<div class="image">
-							<img src="images/P&DT.png" alt="Pickup & Delivery Towing" onclick="toggle('PDT', 'pdtowing', true)" />
 						</div>
 					</section>
 
@@ -152,7 +242,7 @@
 								</article>
 								<article>
 									<!-- <a href="https://github.com/Banapple01/Bug-tracker" target="_blank" class="image"> -->
-										<img src="images/gallery/thumbs/02.jpg" alt="" />
+										<img src="images/gallery/thumbs/02.jpg" alt="bug tracker thumbnail" />
 									<!-- </a> -->
 									<div class="caption">
 										<h3>Bug Tracker</h3>
@@ -286,83 +376,6 @@
 
 					</section>
 
-				<!-- Six -->
-					<section class="wrapper style1 align-center">
-						<div class="inner">
-							<h2>Technologies</h2>
-							<p>Learning more every day</p>
-							<div class="items style1 medium onscroll-fade-in">
-								<section>
-									<span class="fab fa-js-square fa-2x"></span>
-									<h3>JavaScript</h3>
-									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
-								</section>
-								<section>
-									<span class="fab fa-python fa-2x"></span>
-									<h3>Python</h3>
-									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
-								</section>
-								<section>
-									<span class="fas fa-file-code fa-2x"></span>
-									<h3>HTML/CSS</h3>
-									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
-								</section>
-								<section>
-									<span><img src="https://img.icons8.com/ios-filled/50/000000/jquery.png"/></span>
-									<h3>JQuery</h3>
-									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
-								</section>
-								<section>
-									<span><img src="https://img.icons8.com/windows/64/000000/django.png"/></span>
-									<h3>Django</h3>
-									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
-								</section>
-								<section>
-									<span class="fab fa-react fa-2x"></span>
-									<h3>React</h3>
-									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
-								</section>
-								<section>
-									<span class="fab fa-node fa-2x"></span>
-									<h3>Node.js</h3>
-									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
-								</section>
-								<section>
-									<span><img src="https://img.icons8.com/ios-filled/100/000000/mysql-logo.png"/></span>
-									<!-- <h3>MySQL</h3> -->
-									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
-								</section>
-								<section>
-									<span><img src="https://img.icons8.com/color/48/000000/mongodb.png"/></span>
-									<h3>MongoDB</h3>
-									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
-								</section>
-								<section>
-									<span><img src="https://img.icons8.com/ios-filled/50/000000/postgreesql.png"/></span>
-									<h3>PostgreSQL</h3>
-									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
-								</section>
-								<section>
-									<span><img src="https://img.icons8.com/wired/64/000000/postman-api.png"/></span>
-									<h3>Postman</h3>
-									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
-								</section>
-								<section>
-									<span><img src="https://img.icons8.com/material-sharp/48/000000/github.png"/></span>
-									<h3>Github</h3>
-									<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p> -->
-								</section>
-							</div>
-							<p class="major">
-								Contact me via 
-								<a href="mailto:wrightjonathan99@gmail.com? subject=I'm Interested" target="_blank" id="email">
-									email
-								</a> 
-								- wrightjonathan99@gmail.com or phone: 952-303-1811
-							</p>
-						</div>
-					</section>
-
 				<!-- Seven -->
 					<!-- <section class="wrapper style1 align-center">
 						<div class="inner medium">
@@ -392,6 +405,13 @@
 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
+						<p class="major">
+							Contact me via 
+							<a href="mailto:wrightjonathan99@gmail.com? subject=I'm Interested" target="_blank" id="email">
+								email
+							</a> 
+							- wrightjonathan99@gmail.com or phone: 952-303-1811
+						</p>
 						<a href="#one" class="button big wide smooth-scroll-middle" id="bottombutton">
 							Back to the top
 						</a>
