--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 								I created the backend using Python Django, leveraging APIs like Twilio for communication with
 								the customer via text. MySQL was used as the database for this project with AWS hosting</p>
 							<ul class="actions stacked">
-								<li><a href="https://textatow.com/" class="button">walk-through</a></li>
+								<li><a href="https://textatow.com/" target="_blank" class="button">walk-through</a></li>
 								<!-- onclick="toggle('PDT', 'pdtowing', true)" -->
 							</ul>
 						</div>
